--- a/app/elements/coder/code-editor/language-selector.html
+++ b/app/elements/coder/code-editor/language-selector.html
@@ -14,7 +14,7 @@
 		}
 	</style>
 	<template>
-		<paper-dropdown-menu label="Language" selected-item="{{language}}">
+		<paper-dropdown-menu selected-item="{{language}}">
 			<paper-menu id="languageMenu" class="dropdown-content">
 				<template is="dom-repeat" items="{{languages}}">
 					<option value="{{item.tag}}">{{item.name}}</option>
