--- a/app/elements/coder/challenge/ws-element.html
+++ b/app/elements/coder/challenge/ws-element.html
@@ -11,23 +11,44 @@
 				},
 				url: {
 					type: String
+				},
+				reconnectTries: {
+					type: Number,
+					value: -1
 				}
 			},
 			observers: [
 				'afterPropertiesSet(url)'
 			],
 			afterPropertiesSet: function(){
+				this.startSocket();
+			},
+			startSocket: function(){
+				this.reconnectTries++;
 				this.socket = new WebSocket(this.url);
 				this.socket.onerror = this.onError.bind(this);
 				this.socket.onopen = this.onOpen.bind(this);
 				this.socket.onmessage = this.onMessage.bind(this);
+				this.socket.onclose = this.onClose.bind(this);
+			},
+			onClose: function (data) {
+				console.log('connection closed');
+				console.log(data);
 			},
 			onError: function (error) {
+				console.log('connection error');
+				console.log(error);
 				this.fire('ws-error', error);
+				if(this.reconnectTries > 10){
+					console.log('We tried to reconnect 10 times and nothing happened. Please try again later');
+					return;
+				}
+				this.startSocket();
 			},
 			onOpen: function (event) {
 				this.fire('ws-open', event);
 				this.send('open_connection');
+				console.log('connection opened');
 			},
 			onMessage: function (event) {
 				this.fire('ws-message', event.data);
