--- a/app/elements/coder/challenge/tasks/ccc-drone-task.html
+++ b/app/elements/coder/challenge/tasks/ccc-drone-task.html
@@ -81,7 +81,7 @@
 			</div>
 			<div class="halfScreen">
 				<paper-tabs selected="{{selected}}" align-bottom="true" no-ink="true" class="header right">
-					<paper-tab>Input view</paper-tab>
+					<paper-tab>Upload solution file</paper-tab>
 					<paper-tab>Code editor view</paper-tab>
 				</paper-tabs>
 				<template is="dom-if" if="{{inputView}}">
