fix challenge creat epage

--- a/app/elements/common/datepicker/date-time-picker.html
+++ b/app/elements/common/datepicker/date-time-picker.html
@@ -54,6 +54,9 @@
 				}
 			},
 			_dateTimeSet: function(){
+				if (!this.dateTime){
+					return;
+				}
 				if (!(this.dateTime instanceof Date)){
 					var date = new Date(this.dateTime);
 					this.$.datePicker.date = date;
