fix upload solution file

--- a/app/elements/coder/input-view/input-view-element.html
+++ b/app/elements/coder/input-view/input-view-element.html
@@ -87,6 +87,7 @@
 					var fr = new FileReader();
 					fr.onload = function(e) {
 						self.$.input.value = e.target.result;
+						self.inputValue = e.target.result;
 					};
 					fr.readAsText(files[0]);
 				}
