--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -65,13 +65,15 @@
 			}
 		</style>
 		<template-service id="templateService" template="{{template}}"></template-service>
+		<user-submission-service id="submissionService"></user-submission-service>
+		<ws-element url="{{wsUrl}}"></ws-element>
 		<div id="codeEditorWrapper" class$="{{codeEditorWrapperClass}}">
 			<div id="codeEditorCommands">
 				<language-selector task="{{task}}" language="{{languageOption}}" style="margin-left: 20px;"></language-selector>
 				<span></span>
 				<paper-icon-button on-click="_maximize" icon="{{maximizeIcon}}"></paper-icon-button>
 			</div>
-			<code-editor id="codeEditor" task-id="{{task.id}}" language="{{language}}" on-code-changed="_setCachedCode"></code-editor>
+			<code-editor id="codeEditor" language="{{language}}" on-code-changed="_setCachedCode"></code-editor>
 			<div id="actions">
 				<paper-fab mini on-click="_goToInstructions" icon="chrome-reader-mode"></paper-fab>
 				<paper-fab mini on-click="_download" icon="file-download"></paper-fab>
@@ -104,6 +106,10 @@
 				template: {
 					notify: true,
 					observer: '_templateChanged'
+				},
+				wsUrl: {
+					type: String,
+					notify: true
 				}
 			},
 			_goToInstructions: function(){
@@ -114,14 +120,17 @@
 			},
 			run: function(){
 				this.fire('start-loading');
-				this.$$('#codeEditor').run();
+				var files = this.$$('#codeEditor').getFiles();
+				this.$.submissionService.run(this.task.id, this.language, files);
 			},
 			submit: function(){
 				this.fire('start-loading');
-				this.$$('#codeEditor').submit();
+				var files = this.$$('#codeEditor').getFiles();
+				this.$.submissionService.submit(this.task.id, this.language, files);
 			},
 			ready: function(){
 				this._setValue(this._getCachedCode());
+				this.wsUrl = util.getWSUrl('/ws');
 			},
 			_addFile: function(){
 				this.$$('#fileToRun').click();
