Refactor code editor and add file explorer
 * Remove WebSocket component from code-editor
 * Remove user-submission-service from code-editor

Support for multiple files:
 * Caching for multiple files
 * Adapt submission service to POST multiple files

Cleanup code
 * Remove unused file
 * Create reusable module for duplicate styles
 * Remove debug lines

--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -61,13 +61,15 @@
 			}
 		</style>
 		<template-service id="templateService" template="{{template}}"></template-service>
+		<user-submission-service id="submissionService"></user-submission-service>
+		<ws-element url="{{wsUrl}}"></ws-element>
 		<div id="codeEditorWrapper" class$="{{codeEditorWrapperClass}}">
 			<div id="codeEditorCommands">
 				<language-selector task="{{task}}" language="{{languageOption}}" style="margin-left: 20px;"></language-selector>
 				<span></span>
 				<paper-icon-button on-click="_maximize" icon="{{maximizeIcon}}"></paper-icon-button>
 			</div>
-			<code-editor id="codeEditor" task-id="{{task.id}}" language="{{language}}" on-code-changed="_setCachedCode"></code-editor>
+			<code-editor id="codeEditor" on-code-changed="_setCachedCode"></code-editor>
 			<div id="actions">
 				<paper-fab mini on-click="_goToInstructions" icon="chrome-reader-mode"></paper-fab>
 				<template is="dom-if" if="{{showDownload}}">
@@ -102,6 +104,10 @@
 				template: {
 					notify: true,
 					observer: '_templateChanged'
+				},
+				wsUrl: {
+					type: String,
+					notify: true
 				}
 			},
 			_goToInstructions: function(){
@@ -111,15 +117,19 @@
 				window.open(this.task.description, '', '_blank');
 			},
 			run: function(){
+				//todo: submission service
 				this.fire('start-loading');
-				this.$$('#codeEditor').run();
+				var files = this.$codeEditor.getFiles();
+				this.$.submissionService.run(this.task.id, this.language, files);
 			},
 			submit: function(){
 				this.fire('start-loading');
-				this.$$('#codeEditor').submit();
+				var files = this.$.codeEditor.getFiles();
+				this.$.submissionService.submit(this.task.id, this.language, files);
 			},
 			ready: function(){
 				this._setValue(this._getCachedCode());
+				this.wsUrl = util.getWSUrl('/ws');
 			},
 			_addFile: function(){
 				this.$$('#fileToRun').click();
@@ -140,13 +150,13 @@
 				if(!this.language){
 					return;
 				}
-				localStorage.setItem('cachedCode.' + this.language, code);
+				localStorage.setItem(this.language, JSON.stringify(code));
 			},
 			_getCachedCode: function(){
 				if(!this.language){
 					return undefined;
 				}
-				return localStorage.getItem('cachedCode.' + this.language);
+				return JSON.parse(localStorage.getItem(this.language));
 			},
 			_languageOptionChanged: function(){
 				if(!this.languageOption){
@@ -156,12 +166,13 @@
 			},
 			_languageChanged: function(){
 				if(this.language){
+					this.$.codeEditor.language = this.language;
 					var cachedCode = this._getCachedCode();
 					if(cachedCode){
-						this._setValue(cachedCode);
+						this.$.codeEditor.setFilesJson(cachedCode);
 						return;
 					}
-					this._setValue('');
+					this.$.codeEditor.clearFiles();
 					if(!this.task || !this.task.templates || !this.language){
 						return;
 					}
@@ -175,7 +186,7 @@
 			},
 			_templateChanged: function(){
 				if(this.template && !this._getCachedCode()){
-					this.$$('#codeEditor').setFile(this.template);
+					this.$codeEditor.addFile(this.template);
 				}
 			},
 			_filesUploaded: function() {
