--- a/app/elements/coder/challenge/tasks/endpoints/general-code-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/general-code-task.html
@@ -1,9 +1,6 @@
 <link rel="import" href="../../../../../../bower_components/iron-icons/av-icons.html">
 <link rel="import" href="../../../../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../../../../bower_components/paper-material/paper-material.html">
-<link rel="import" href="/elements/coder/code-editor/code-editor.html">
-<link rel="import" href="/elements/coder/code-editor/language-selector.html">
-<link rel="import" href="task-display.html">
 <link rel="import" href="../../../../../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../../../../../../bower_components/iron-icons/av-icons.html">
 
@@ -78,7 +75,7 @@
 			<div class="flex">
 				<paper-material id="topRightCard" elevation="1">
 					<div id="codeEditorWrapper">
-						<code-editor id="codeEditor" task-id="{{task.id}}" language="{{language.value}}"></code-editor>
+						<code-editor id="codeEditor" language="{{language.value}}"></code-editor>
 					</div>
 				</paper-material>
 				<paper-material id="botRightCard" elevation="1">
@@ -117,15 +114,17 @@
 				languages: {
 					type: Array,
 					notify: true
+				},
+				language: {
+					type: Object,
+					notify: true
 				}
 			},
 			runCode: function(){
-				this.$.codeEditor.run();
-				this.control.loading();
+				//todo(vbalan): I am deprecated. Please fix me
 			},
 			runTests: function(){
-				this.$.codeEditor.submit();
-				this.control.loading();
+				//todo(vbalan): I am deprecated. Please fix me
 			},
 			finishTask: function(){
 				this.fire('task-finished');
